<resources>
    <string name="app_name">Signav</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Signav</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Signav now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="todo">Image</string>
    <string name="sign_up">Sign up</string>
    <string name="request_sign">Request Sign</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="choose_image">Choose Image</string>
    <string name="review_request">Review Request</string>
    <string name="enter_email_address_of_the_receiver">Enter Email address of the Receiver</string>
    <string name="request">Make Request</string>
    <string name="logout">Logout</string>
    <string name="share_app">Share App</string>
    <string name="clear">Clear</string>
    <string name="sign">Sign</string>
    <string name="log_in">Log in</string>
    <string name="Developer">Developer</string>
    <string name="DeleteAccount">Delete Account</string>
    <string name="hello_You_r_log_in_as">Hello you are logged in as:</string>
    <string name="rerequest">Re-Request</string>
    <string name="reject">reject</string>
    <string name="enter_email_address_of_the_sender">Enter Email address of the Sender</string>
    <string name="Error">error</string>
    <string name="verify_email_id">Verify Email ID</string>
    <string name="EmailVerificationStatus">Not Verified</string>
    <string name="PendingRequests">Pending Requests</string>
    <string name="yourRequests">Your Requests</string>
    <string name="searchRequest">Search An Issue</string>
    <string name="Subject">Enter the Subject</string>
    <string name="choose_pdf">Choose full Document</string>


</resources>
