<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/Error"
        android:textSize="40sp"
        android:text="@string/Error"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />


    <LinearLayout
        android:id="@+id/mainLayoutShare"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:gravity="center">

    <TextView
        android:id="@+id/senderReview"
        android:text="@string/todo"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <TextView
        android:id="@+id/receiverReview"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <ImageView
        android:src="@android:drawable/gallery_thumb"
        android:id="@+id/selectedDocReview"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="80"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="3"
        style="?android:attr/buttonBarStyle">
        <Button
            android:textColor="@android:color/white"
            android:id="@+id/rejectBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_dark"
            android:text="@string/reject"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:textColor="@android:color/white"
            android:id="@+id/signBtn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            android:text="@string/sign"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:textColor="@android:color/white"
            android:id="@+id/reRequestBtn"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_light"
            android:text="@string/rerequest" />
    </LinearLayout>
    </LinearLayout>




</LinearLayout>